auto-test/tests/chapter_13/invalid_types/extra_credit/compound_left_bitshift.c
int main(void) {
    
    double d = 1.0;
    d <<= 1;
    return d;
}